Esqueleto de la memoria.

--- a/LaTeX/memoria.tex
+++ b/LaTeX/memoria.tex
@@ -54,14 +54,35 @@
 
 
 \begin{abstract}
-%Aquí el resumen
+Descripción detallada del desarrollo en el laboratorio de la asignatura, 
 \end{abstract}
 
 \tableofcontents
 
+\clearpage
 
-\section{Práctica 1. Introducción a Arduino.}
+\section{Práctica 1. Introducción a Arduino. Descripción del hardware}
 
-\section{Práctica 2. Manejo de un display LCD.}
+\subsection{Esquematico de conexiones}
+
+
+
+
+\section{Práctica 2. Montaje de un servidor web de monitorización. Descripción del software}
+
+\subsection{Montaje de red}
+
+\subsection{Protocolo serie}
+
+\subsection{Servicio web}
+
+
+\section{Notas adicionales}
+
+\subsection{Aproximación a la temperatura real}
+%TODO: Quejarse de lo mierder que son los sensores de temperatura
+
+\subsection{Lector de pulsaciones}
+%TODO: Hablar del lector de pulsaciones
 
 \end{document}
